# compute_shader_001

./: Cargo.toml
src/: compute.rs  compute.wgsl  lib.rs  main.rs  model.rs  paint.wgsl  render.rs  render.wgsl  status.rs
src/filters/: monochrome.wgsl
