[package]
name = "compute_shader_001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19.3"}
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.2.5"
async-executor = "1.4.1"
bytemuck = { version = "1.12.1", features = ["derive"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]